<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">H-daForum</string>

    <!-- forum detail -->
    <string name="title">Forum Title</string>
    <string name="description">Forum Description</string>
    <string name="commentTitle">Comments</string>
    <string name="post">Post</string>

    <!-- main forum activity -->
    <string name="menu_settings">Settings</string>
    <string name="selected_batch"></string>
    <string name="profileButton">Profile</string>
    <string name="notificationButton">Notification</string>
    <string name="settingButton">Settings</string>
    <string name="forumButton">Forum</string>
    <string name="exchangeKeyButton">Key</string>
    <string name="prvForum">Earlier Batches</string>
    <string name="create_topic">CREATE TOPIC</string>
    <string name="name">Name: </string>
    <!-- list view -->
    <string name="imgDesc">User Image</string>
    <string name="voteUp">Vote Up</string>
    <string name="title_activity_forum_topic_detail">ForumTopicDetail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cpost_forum_topic">CPostForumTopic</string>
    <string name="postTopic">Post</string>
    <string name="forum_title_error">Nr. of characters in the title must be between 15 to 140.</string>
    <string name="forum_desc_error">Nr. of characters in the description must be atleast 30.</string>
    <string name="title_activity_cfirst_page_of_app">Welcome to Hda Forum</string>
    <string name="hello_world">Hello world!</string>

    <!-- launcher activity - Login or Register -->
    <string name="Login">Login</string>
    <string name="Register">Register</string>

    <!-- register user -->
    <string name="title_activity_cregister_user">Register</string>

    <!-- verfication link activity -->
    <string name="title_activity_cverify_link_sent">Verification Link Sent</string>
    <string name="verificationLinkSent">A verification link has been sent to your email ID and one time pass code to your mobile number. Please click on the link and enter the pass code received on mobile phone to register.</string>
    <string name="notRcvdCode">Havent received the code? Click to resend the code</string>
    <string name="title_activity_cexchange_key">CExchangeKey</string>

    <!-- Usage in App Design -->
    <color name="gray">#800000</color>

    <!-- Usage in Old batch activities -->
    <string name="batch_prompt">Choose a Batch</string>

    <string-array name="batch_arrays">
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
    </string-array>

    <string name="old_batch_selection">Old Batches</string>
    <string name="linearLayoutOld">Old Batches</string>

</resources>