<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mytalentfolio.h_daforum.ForumTopicDetail" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/listview"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#41B7D8"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/listview"
        android:text="@string/description"
        android:textColor="#767676"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/progressOfComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.22"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="385dp"
            android:layout_marginBottom="8dp"
            android:text="Loading Comments... "
            android:textSize="13sp" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentViewPostLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_weight="0.22"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comments: "
            android:textColor="#41B7D8"
            android:textSize="14sp" />

        <ScrollView
            android:id="@+id/commentsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="4" >

            <LinearLayout
                android:id="@+id/commentLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="330dp"
                android:layout_weight="4"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commentPostLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/listview"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editComment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="2"
            android:background="@drawable/text_selector"
            android:ems="30"
            android:hint="Write a Comment"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <Button
            android:id="@+id/postComment"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.87"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:nextFocusLeft="@+id/editComment"
            android:text="@string/post"
            android:textColor="#F3F3F3"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>